# caniot-lib

./: .clang-format  .editorconfig  0001.patch  CMakeLists.txt  Makefile  readme.md
docs/: caniot.md
examples/: main.c  std.c  std.h  tempsens.c  tempsens.h
include/: archutils.h  attributes.h  caniot.h  caniot_common.h  caniot_errors.h  class.h  controller.h  datatype.h  device.h  helper.h  pendingq.h  phys.h  sim.h  temp.h
include/caniot/: archutils.h  attribute.h  caniot.h  caniot_config.h  caniot_private.h  classes.h  controller.h  datatype.h  device.h  errors.h  fake.h  phys.h
include/caniot/classes/: class0.h  class1.h
samples/: CMakeLists.txt
samples/attributes/: CMakeLists.txt  attr.c
samples/sim/: CMakeLists.txt  canbus.c  controllers.c  devices.c  header.h  os.c  sim.c  vtime.c
src/: attribute.c  attributes.c  caniot.c  class.c  classes.c  controller.c  datatype.c  device.c  fake.c  helper.c  pendingq.c  phys.c  sim.c
tests/: CMakeLists.txt  test.c
zephyr/: CMakeLists.txt  Kconfig
